--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "test:browser": "open test-v2.html"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,10 @@
     "eventemitter2": "^6.4.9",
     "fabric-layers-react": "^2.0.0",
     "fabric-pure-browser": "^5.1.0",
-    "jsdom": "^26.1.0",
+    "jsdom": "^26.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
